chore: add GUT pre-run hook for test isolation
- Move hook to tests/hooks/ directory for proper GUT discovery
- Ensure autoload singletons (EventBus, GameManager) exist
- Reset EventBus state between test runs for determinism
- Clear listeners and recorded events
- Synchronize RandomProvider seed with EventBus
- Update .gutconfig.json hook path

--- a/.gutconfig.json
+++ b/.gutconfig.json
@@ -5,7 +5,7 @@
     "should_maximize": true,
     "compact_mode": false,
     "double_strategy": "partial",
-    "pre_run_script": "",
+    "pre_run_script": "res://tests/test_pre_run_hook.gd",
     "post_run_script": "",
     "hide_orphans": true,
     "log_level": 1,
